--- a/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
+++ b/app/src/main/res/layout/company_outlinebox_phone_number_layout.xml
@@ -49,12 +49,13 @@
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:layout_gravity="center"
-            android:autofillHints="creditCardSecurityCode"
+            android:autofillHints="AUTOFILL_HINT_SMS_OTP"
             android:background="@android:color/transparent"
             android:digits="0123456789"
             android:fontFamily="@font/opensans_semibold"
             android:hint="Phone Number"
             android:imeOptions="actionNext"
+            android:importantForAutofill="noExcludeDescendants"
             android:inputType="number|textNoSuggestions"
             android:maxLines="1"
             android:padding="14dp"
