added popup in signet first letter capital and space changes in 3 activities

--- a/app/src/main/res/layout/activity_add_payment_signet.xml
+++ b/app/src/main/res/layout/activity_add_payment_signet.xml
@@ -146,9 +146,11 @@
                         android:id="@+id/etWalletId"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz1234567890"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -216,7 +218,6 @@
                             android:id="@+id/etAddress1"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -276,7 +277,6 @@
                             android:id="@+id/etAddress2"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -335,7 +335,6 @@
                             android:id="@+id/etCity"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
@@ -418,7 +417,6 @@
                                 android:id="@+id/etState"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:autofillHints="creditCardSecurityCode"
                                 android:cursorVisible="false"
                                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                                 android:editable="false"
@@ -483,7 +481,6 @@
                             android:id="@+id/etZipCode"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:autofillHints="creditCardSecurityCode"
                             android:digits="1234567890"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionDone"
