--- a/app/src/main/res/layout/activity_pay_to_merchant.xml
+++ b/app/src/main/res/layout/activity_pay_to_merchant.xml
@@ -182,7 +182,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_centerVertical="true"
                                 android:layout_marginLeft="@dimen/_5sdp"
-                                android:layout_toLeftOf="@+id/imageConvert"
+                                android:layout_toLeftOf="@+id/imageConvertIV"
                                 android:orientation="horizontal">
 
                                 <EditText
@@ -214,7 +214,7 @@
 
 
                             <ImageView
-                                android:id="@+id/imageConvert"
+                                android:id="@+id/imageConvertIV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_alignParentRight="true"
