--- a/app/src/main/res/layout/activity_edit_email2.xml
+++ b/app/src/main/res/layout/activity_edit_email2.xml
@@ -76,6 +76,7 @@
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
                     android:imeOptions="actionNext"
+                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890@+-_."
                     android:inputType="text|textNoSuggestions"
                     android:maxLength="30"
                     android:maxLines="1"
