--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -151,7 +151,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvTeam"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+                android:layout_height="match_parent"></androidx.recyclerview.widget.RecyclerView>
         </LinearLayout>
         <TextView
             android:id="@+id/noBrandsTV"
