--- a/app/src/main/res/layout/list_item_team.xml
+++ b/app/src/main/res/layout/list_item_team.xml
@@ -61,7 +61,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="@font/opensans_bold"
-                        android:text="AL"
+                        android:text=""
                         android:textColor="@color/white"
                         android:textSize="@dimen/_14ssp" />
                 </androidx.cardview.widget.CardView>
@@ -91,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semibold"
-                android:text="Alison L"
+                android:text=""
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
 
@@ -101,7 +101,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_6sdp"
                 android:fontFamily="@font/opensans_regular"
-                android:text="Administrator"
+                android:text=""
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_12ssp" />
         </LinearLayout>
@@ -114,7 +114,7 @@
             android:background="@drawable/txn_pending_bg"
             android:fontFamily="@font/opensans_bold"
             android:gravity="center"
-            android:text="Pending"
+            android:text=""
             android:layout_marginRight="@dimen/_20sdp"
             android:textColor="@color/orange"
             android:textSize="@dimen/_8ssp" />
