--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -72,7 +72,7 @@
             android:text="CLICK HERE TO GO DASHBOARD"
             android:textColor="@color/error_red"
             android:textSize="@dimen/_11ssp"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
         <ScrollView
             android:layout_width="match_parent"
