--- a/app/src/main/res/layout/activity_add_recipient.xml
+++ b/app/src/main/res/layout/activity_add_recipient.xml
@@ -149,7 +149,8 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvRecent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_7sdp"></androidx.recyclerview.widget.RecyclerView>
 
                     <TextView
                         android:id="@+id/tvRecentUsers"
@@ -201,7 +202,8 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvContacts"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_7sdp"></androidx.recyclerview.widget.RecyclerView>
 
                     <TextView
                         android:id="@+id/tvNoContacts"
@@ -244,7 +246,8 @@
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvCoyniUsers"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_7sdp"></androidx.recyclerview.widget.RecyclerView>
 
                     <TextView
                         android:id="@+id/tvCoyniUsers"
