--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -39,18 +39,29 @@
             android:visibility="gone" />
     </androidx.cardview.widget.CardView>
 
-
     <TextView
         android:id="@+id/title"
         android:layout_width="0dp"
         android:text="TEST"
         android:layout_height="wrap_content"
         android:padding="@dimen/_10sdp"
-        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
         app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>
 
+    <ImageView
+        android:id="@+id/tickIcon"
+        app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
+        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"
+        android:visibility="visible"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_custom_tick"
+        app:tint="@color/primary_green" />
 </androidx.constraintlayout.widget.ConstraintLayout>
