--- a/app/src/main/res/layout/default_account_dialog.xml
+++ b/app/src/main/res/layout/default_account_dialog.xml
@@ -1,81 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/top_rounded_bg"
-    >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
-
-    <LinearLayout
-        android:id="@+id/profileviewLL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="vertical">
-        <View
-            android:layout_width="@dimen/_43sdp"
-            android:layout_height="2dp"
-            android:background="@drawable/shape_green_round_rect"
-            android:layout_marginTop="@dimen/_13sdp"
-            android:layout_marginBottom="@dimen/_28sdp"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_10ssp"
-            android:layout_marginBottom="@dimen/_10ssp"
-            android:background="@drawable/fullradius_list_items"
-            android:orientation="vertical">
-
-            <ExpandableListView
-                android:id="@+id/business_profile_accounts_expandable_list"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
-                android:layout_marginBottom="@dimen/_15sdp"
-                android:divider="@null"
-                android:groupIndicator="@null"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" />
-
-        </RelativeLayout>
-
-    </LinearLayout>
+    android:orientation="vertical">
 
     <View
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_4sdp"
-        android:background="#F6F9FE"
-        />
+        android:layout_width="@dimen/_43sdp"
+        android:layout_height="2dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/_13sdp"
+        android:background="@drawable/shape_green_round_rect" />
+
     <LinearLayout
-        android:id="@+id/profileLL"
+        android:id="@+id/profileview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <ExpandableListView
+            android:id="@+id/business_profile_accounts_expandable_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:divider="@null"
+            android:groupIndicator="@null" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_4sdp"
+            android:background="#F6F9FE" />
+
+        <LinearLayout
+            android:id="@+id/profileLL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center"
+            android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/profile_account_profile_image"
                 android:layout_width="@dimen/_35sdp"
                 android:layout_height="@dimen/_35sdp"
-                android:layout_alignParentRight="true"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_10ssp"
                 android:layout_marginBottom="@dimen/_10ssp"
                 app:cardBackgroundColor="@color/white"
                 app:cardCornerRadius="@dimen/_18sdp"
-                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/title"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <ImageView
@@ -99,89 +75,45 @@
             </androidx.cardview.widget.CardView>
 
             <TextView
+                android:id="@+id/defualt_account_dialog_personal_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/defualt_account_dialog_personal_name"
                 android:layout_marginStart="@dimen/_15sdp"
                 android:fontFamily="@font/opensans_semibold"
                 android:text="Jonathan Joestar"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11sdp" />
 
-    </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/_6sdp"
-            android:background="#F6F9FE"/>
-
-    <LinearLayout
-        android:id="@+id/opennewacLL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/profileLL"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/_11sdp"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_add_circle" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_15sdp"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="Open New Account"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11sdp" />
         </LinearLayout>
 
-    </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/doneRL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/white"
-       >
-        <androidx.cardview.widget.CardView
-            android:id="@+id/default_DoneBtn"
+        <View
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_43sdp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/_27sdp"
-            android:gravity="center"
-            app:cardBackgroundColor="@color/primary_green"
-            app:cardCornerRadius="@dimen/_22sdp"
-            android:layout_marginHorizontal="@dimen/_21sdp"
-            app:cardElevation="0dp">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:text="Done"
-                android:textColor="#fdfdfd"
-                android:textSize="@dimen/_12ssp" />
-        </androidx.cardview.widget.CardView>
+            android:layout_height="@dimen/_4sdp"
+            android:background="#F6F9FE" />
 
     </LinearLayout>
 
-</RelativeLayout>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/default_DoneBtn"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_43sdp"
+        android:layout_marginHorizontal="@dimen/_21sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginBottom="@dimen/_27sdp"
+        android:gravity="center"
+        app:cardBackgroundColor="@color/primary_green"
+        app:cardCornerRadius="@dimen/_22sdp"
+        app:cardElevation="0dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:gravity="center"
+            android:text="Done"
+            android:textColor="#fdfdfd"
+            android:textSize="@dimen/_12ssp" />
+    </androidx.cardview.widget.CardView>
+</LinearLayout>
