--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -48,6 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/tvHead"
             android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
             android:fontFamily="@font/opensans_regular"
             android:text="@string/chpwdmsg"
             android:textColor="@color/text_color"
@@ -60,6 +61,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/tvMessage"
             android:layout_marginTop="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_21sdp"
             android:fontFamily="@font/opensans_regular"
             android:lineSpacingExtra="@dimen/_2sdp"
             android:text="As a security measure, you will be logged \nout of your account once you successfully \nchange your password. "
@@ -76,14 +78,15 @@
                 android:layout_height="match_parent"
                 android:layout_above="@+id/cvSave"
                 android:layout_marginTop="@dimen/_15sdp"
-                android:paddingEnd="@dimen/_21sdp"
+                android:layout_marginEnd="@dimen/_21sdp"
                 android:scrollbars="none">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginBottom="@dimen/_10sdp"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:paddingBottom="@dimen/_30sdp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:id="@+id/currentPassTIL"
@@ -275,9 +278,9 @@
                             android:maxLines="1"
                             android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                             android:singleLine="true"
-                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textColor="@color/text_color"
                             android:textColorHint="@color/light_gray"
+                            android:textCursorDrawable="@drawable/cursor_color"
                             android:textSize="@dimen/_12ssp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -313,6 +316,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_45sdp"
                 android:layout_alignParentBottom="true"
+                android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_21sdp"
                 android:layout_marginBottom="@dimen/_27sdp"
                 app:cardBackgroundColor="@color/inactive_color"
